# locus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/locus/: Cargo.toml
crates/locus-alloc/: Cargo.toml
crates/locus-alloc/benches/: kv_remote_free_policy.rs  kv_reuse_order_locality.rs  locus_eval_jemalloc.rs  locus_eval_locus.rs  locus_eval_mimalloc.rs  locus_eval_system.rs  mixed_lifetime_jemalloc.rs  mixed_lifetime_mimalloc.rs  mixed_lifetime_system.rs  remote_free_backpressure.rs  remote_free_capacity_retune.rs  remote_free_chunk_publish.rs  remote_free_concurrent.rs  remote_free_drift_matrix.rs  remote_free_mixed_lifetime_trace.rs  remote_free_mixed_size_capacity_retune.rs  remote_free_mixed_size_policy.rs  remote_free_service_telemetry.rs  remote_free_sharded.rs  request_remote_free_policy.rs  scratch_arena.rs  scratch_arena_jemalloc.rs  scratch_arena_mimalloc.rs  scratch_arena_system.rs
crates/locus-alloc/benches/locus_eval/: malloc_runner.rs  workloads.rs
crates/locus-alloc/benches/remote_free_service/: application_harness.rs  dry_run_harness.rs  guarded_harness.rs  guarded_runtime_harness.rs  harness.rs  runtime_collected_harness.rs  runtime_collected_multi_owner_harness.rs  runtime_collected_rollback_harness.rs  runtime_coordinator_harness.rs  runtime_local_dirty_group_harness.rs  runtime_registry_harness.rs  runtime_service_window_harness.rs  sample_filter.rs  sample_output.rs
crates/locus-alloc/examples/: kv_pool_bind.rs  mapped_scratch_bind.rs  mapped_scratch_lock.rs  mapped_scratch_thp.rs  mbind_region.rs  pinned_scratch_near_gpu.rs  pinned_scratch_pool.rs  remote_free_queued_byte_owner_loop.rs  serving_engine.rs
crates/locus-alloc/src/: kv_block.rs  lib.rs  mapped_scratch.rs  mapped_scratch_lock_probe.rs  mapped_scratch_thp_fault_sample.rs  mapped_scratch_thp_page_sample.rs  mapped_scratch_thp_probe.rs  pinned_scratch.rs  pinned_scratch_near_gpu_probe.rs  remote_free.rs  request.rs  request_scratch.rs  scratch_arena.rs
crates/locus-alloc/src/kv/: mod.rs
crates/locus-alloc/src/remote_free/: application.rs  budget.rs  config.rs  controller.rs  coordinator.rs  dirty_buffer.rs  dirty_window.rs  drift.rs  guard.rs  planner.rs  runtime.rs  service_window.rs  telemetry.rs
crates/locus-alloc/src/sys/: mod.rs
crates/locus-alloc/tests/: remote_free_retune_action_matrix.rs
crates/locus-core/: Cargo.toml
crates/locus-observe/: Cargo.toml
crates/locus-observe/examples/: cgroup_numa_stat.rs  locality_environment.rs  node_numastat.rs  process_fault_counts.rs  self_numa_maps.rs
crates/locus-observe/src/: lib.rs
crates/locus-sys/: Cargo.toml
crates/locus-sys/examples/: mbind_region.rs
crates/locus-sys/src/: lib.rs
crates/locus-topology/: Cargo.toml
crates/locus-validate/: Cargo.toml
crates/locus-validate/examples/: live_mapped_scratch_thp_validation_gate.rs  live_pinned_scratch_near_gpu_validation_gate.rs  live_pinned_scratch_validation_gate.rs  live_placement_validation_gate.rs  mapped_scratch_thp_benchmark_evidence_report.rs  mapped_scratch_thp_benchmark_evidence_run_summary.rs  mapped_scratch_thp_fault_sample_report.rs  mapped_scratch_thp_fault_sample_validation_gate.rs  mapped_scratch_thp_validation_gate.rs  pinned_scratch_near_gpu_validation_gate.rs  pinned_scratch_validation_gate.rs  placement_validation_gate.rs  remote_free_service_sample_compare.rs  remote_free_service_telemetry_collect.rs  remote_free_service_telemetry_summary_validate.rs
crates/locus-validate/src/: lib.rs  mapped_scratch_thp_gate.rs  pinned_scratch_gate.rs  pinned_scratch_near_gpu_gate.rs  remote_free_service_collection_summary.rs  remote_free_service_sample_compare.rs  remote_free_service_timing_stability.rs  thp_benchmark_evidence_report.rs  thp_benchmark_evidence_run_summary.rs  thp_fault_sample_comparison.rs  thp_fault_sample_gate.rs  thp_fault_sample_report.rs
crates/locus-validate/src/linux/: mod.rs  placement_validation_gate.rs
crates/locus/benches/: kv_reuse_order_locality.rs  locus_eval_locus.rs  remote_free_chunk_publish.rs  remote_free_concurrent.rs  remote_free_mixed_lifetime_trace.rs  remote_free_sharded.rs  scratch_arena.rs
crates/locus/benches/mixed_lifetime_malloc/: trace.rs
crates/locus/examples/: kv_pool_bind.rs  mapped_scratch_bind.rs  mapped_scratch_lock.rs  mapped_scratch_thp.rs  mbind_region.rs  pinned_scratch_near_gpu.rs  pinned_scratch_pool.rs  serving_engine.rs
crates/locus/src/: lib.rs  mapped_scratch.rs  pinned_scratch_near_gpu_probe.rs  pinned_scratch_pool_probe.rs  scratch_arena.rs
crates/locus/src/kv/: block.rs
crates/locus/src/sys/: chunk_mailbox.rs
crates/locus/src/topology/: discovery.rs  mod.rs
documentation/: README.md
documentation/adr/: 0001-explicit-domain-runtime.md  0002-narrow-sys-unsafe-boundary.md  0003-validation-gate-crate.md
documentation/dev-notes/: 2026-07-02-benchmark-baseline-matrix.md  2026-07-02-foundation.md  2026-07-02-linux-observability-environment.md  2026-07-02-pinned-staging-foundation.md  2026-07-02-placement-proof-checklist.md  2026-07-02-remote-free-benchmark-findings.md  2026-07-02-validation-output-parsers.md  2026-07-03-best-benchmark-results.md  2026-07-03-remote-free-budget-selection.md  2026-07-03-thp-measurement-plan.md  2026-07-04-chunk-granular-mailbox-design.md  2026-07-04-remote-free-concurrency-lessons.md  2026-07-05-code-graveyard.md  2026-07-05-evidence-rescue.md  2026-07-06-ferrite-consumer.md
documentation/evaluations/: 0001-locus-eval-v1.md
documentation/experiments/: 0001-scratch-arena-foundation.md  0002-linux-locality-evidence-parsers.md  0003-observability-file-readers.md  0004-linux-container-validation.md  0005-live-self-numa-maps-example.md  0006-request-home-selection.md  0007-request-scoped-scratch.md  0008-locality-evidence-summaries.md  0009-self-numa-maps-summary-example.md  0010-reusable-request-scratch-pool.md  0011-node-tagged-kv-block-pool.md  0012-logical-kv-block-table.md  0013-owned-mapped-region.md  0014-mapped-scratch-arena.md  0015-write-touch-mapped-pages.md  (+306 more)
scripts/: run-eval.sh
(+322 files in other folders)
