[workspace]
members = [
    "crates/locus-alloc",
    "crates/locus-core",
    "crates/locus-observe",
    "crates/locus-topology",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/victorbona/locus"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
