[package]
name = "locus-alloc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
locus-core = { path = "../locus-core" }
locus-sys = { path = "../locus-sys" }

[dev-dependencies]
criterion = "0.5"
locus-observe = { path = "../locus-observe" }
mimalloc = "0.1.52"
tikv-jemallocator = "0.7.0"

[lib]
path = "src/lib.rs"

[[bench]]
name = "scratch_arena"
harness = false

[[bench]]
name = "scratch_arena_mimalloc"
harness = false

[[bench]]
name = "scratch_arena_jemalloc"
harness = false

[[bench]]
name = "scratch_arena_system"
harness = false

[lints]
workspace = true
