[package]
name = "locus-alloc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
locus-core = { path = "../locus-core" }
locus-sys = { path = "../locus-sys" }

[dev-dependencies]
criterion = "0.5"
locus-observe = { path = "../locus-observe" }
locus-topology = { path = "../locus-topology" }
mimalloc = "0.1.52"
tikv-jemallocator = "0.7.0"

[lib]
path = "src/lib.rs"

[[bench]]
name = "scratch_arena"
harness = false

[[bench]]
name = "scratch_arena_mimalloc"
harness = false

[[bench]]
name = "scratch_arena_jemalloc"
harness = false

[[bench]]
name = "scratch_arena_system"
harness = false

[[bench]]
name = "remote_free_backpressure"
harness = false

[[bench]]
name = "remote_free_mixed_size_policy"
harness = false

[[bench]]
name = "remote_free_drift_matrix"
harness = false

[[bench]]
name = "remote_free_capacity_retune"
harness = false

[[bench]]
name = "remote_free_mixed_size_capacity_retune"
harness = false

[[bench]]
name = "kv_remote_free_policy"
harness = false

[[bench]]
name = "request_remote_free_policy"
harness = false

[[bench]]
name = "remote_free_service_telemetry"
harness = false

[lints]
workspace = true

[[bench]]
name = "remote_free_concurrent"
harness = false
