[package]
name = "locus-observe"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
locus = { path = "../locus" }

[dev-dependencies]
tempfile = "3.10"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
