[package]
name = "locus-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2"

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
