[package]
name = "locus-validate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
locus-observe = { path = "../locus-observe" }
locus-sys = { path = "../locus-sys" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
