[package]
name = "locus-validate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
locus-alloc = { path = "../locus-alloc" }
locus-core = { path = "../locus-core" }
locus-observe = { path = "../locus-observe" }
locus-sys = { path = "../locus-sys" }
serde_json = "1.0"

[dev-dependencies]
locus-topology = { path = "../locus-topology" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
