[package]
name = "locus-validate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
# Forwards the Linux-only sysfs discovery feature of locus.
numa = ["locus/numa"]

[dependencies]
locus = { path = "../locus" }
locus-observe = { path = "../locus-observe" }
serde_json = "1.0"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
