[package]
name = "locus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Linux-only sysfs NUMA topology discovery (locus::topology::discovery).
numa = []

[dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
locus-observe = { path = "../locus-observe" }
mimalloc = "0.1.52"
tempfile = "3.10"
tikv-jemallocator = "0.7.0"

[lib]
path = "src/lib.rs"

# The workspace forbids unsafe_code. This crate instead denies it crate-wide
# and allows it only inside the sys module (ADR 0002): forbid cannot be
# overridden per module, so the crate declares its own lint table.
[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"

[[bench]]
name = "scratch_arena"
harness = false

[[bench]]
name = "scratch_arena_mimalloc"
harness = false

[[bench]]
name = "scratch_arena_jemalloc"
harness = false

[[bench]]
name = "scratch_arena_system"
harness = false

[[bench]]
name = "remote_free_concurrent"
harness = false

[[bench]]
name = "remote_free_sharded"
harness = false

[[bench]]
name = "remote_free_chunk_publish"
harness = false

[[bench]]
name = "remote_free_mixed_lifetime_trace"
harness = false

[[bench]]
name = "mixed_lifetime_jemalloc"
harness = false

[[bench]]
name = "mixed_lifetime_mimalloc"
harness = false

[[bench]]
name = "mixed_lifetime_system"
harness = false

[[bench]]
name = "kv_reuse_order_locality"
harness = false

[[bench]]
name = "locus_eval_locus"
harness = false

[[bench]]
name = "locus_eval_jemalloc"
harness = false

[[bench]]
name = "locus_eval_mimalloc"
harness = false

[[bench]]
name = "locus_eval_system"
harness = false
